Consistency across NEODASS and CMEMS plotting scripts. Added line to save float positions as .csv navis_float_process.

--- a/Python_notebooks/NEODASS_sat_vis.ipynb
+++ b/Python_notebooks/NEODASS_sat_vis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,13 +31,14 @@
     "import json\n",
     "import sys\n",
     "import math\n",
-    "from shapely.geometry import Point\n",
-    "from shapely.geometry.polygon import LinearRing"
+    "from geopy.distance import distance\n",
+    "from matplotlib.colors import to_rgba\n",
+    "from collections import defaultdict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,12 +48,13 @@
     "data_dir      = os.path.join(parent_dir, 'data')\n",
     "satellite_dir = os.path.join(data_dir, 'satellite')\n",
     "output_dir    = os.path.join(parent_dir, 'Output/sat_plot')\n",
-    "NEODASS_dir   = os.path.join(satellite_dir, 'NEODASS')"
+    "NEODASS_dir   = os.path.join(satellite_dir, 'NEODASS')\n",
+    "floats_dir    = os.path.join(parent_dir, 'Data/Floats')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,6 +65,14 @@
     "max_lon = -5\n",
     "min_lat = 55\n",
     "max_lat = 66\n",
+    "\n",
+    "# Float colors\n",
+    "# For additional floats, add the name (as it appears in the 'Float_positions.csv') and color you'd like (as a hexcode)\n",
+    "float_colors = {\n",
+    "        '4903532':  '#B4184C',\n",
+    "        'navis102': '#F5A300',\n",
+    "        '1902637':  '#0000E0',\n",
+    "        'navis101': '#FBFF1F'}\n",
     "\n",
     "# CHLA\n",
     "CHLA_color           = 'YlGnBu_r'\n",
@@ -86,105 +96,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Function to calculate the length of one degree of longitude at a given latitude\n",
-    "def lon_deg_length(latitude):\n",
-    "    # Convert latitude from degrees to radians\n",
-    "    lat_rad = np.radians(latitude)\n",
+    "# Function to generate points on a circle centered at (lat, lon) with a given radius\n",
+    "def generate_circle_points(lat, lon, radius_km, num_points=360):\n",
+    "    angles = np.linspace(0, 360, num_points)\n",
+    "    circle_points = []\n",
+    "    for angle in angles:\n",
+    "        point = distance(kilometers=radius_km).destination((lat, lon), angle)\n",
+    "        circle_points.append((point.latitude, point.longitude))\n",
     "    \n",
-    "    # Earth radius in kilometers\n",
-    "    earth_radius_km = 6371.0\n",
-    "    \n",
-    "    # Calculate the length of one degree of longitude at the given latitude using the Haversine formula\n",
-    "    lon_deg_length_km = np.cos(lat_rad) * (2 * np.pi * earth_radius_km) / 360.0\n",
-    "    \n",
-    "    return lon_deg_length_km\n",
-    "\n",
-    "# Function to create a circle geometry\n",
-    "def create_circle(lon, lat, radius_km):\n",
-    "    # Calculate the length of one degree of longitude at the given latitude\n",
-    "    lon_deg_length_km = lon_deg_length(lat)\n",
-    "    \n",
-    "    # Convert radius from km to degrees\n",
-    "    radius_deg = radius_km / lon_deg_length_km\n",
-    "    \n",
-    "    # Create a Point object for the center of the circle\n",
-    "    center_point = Point(lon, lat)\n",
-    "    \n",
-    "    # Create a LinearRing object representing the circle\n",
-    "    circle = center_point.buffer(radius_deg)\n",
-    "    \n",
-    "    return circle"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\hanshil\\AppData\\Local\\Temp\\ipykernel_31716\\1457570185.py:39: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
-      "  last_position_df = pd.concat([last_position_df, last_temp_df], ignore_index=True)\n",
-      "C:\\Users\\hanshil\\AppData\\Local\\Temp\\ipykernel_31716\\1457570185.py:40: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
-      "  position_df = pd.concat([position_df, temp_df], ignore_index=True)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Retrieve float locations, load in bathymetry data\n",
-    "\n",
-    "wmo_list = [4903532, 1902637]\n",
-    "#Float 1 = test float in the Icelandic Bassin\n",
-    "float_1_url = 'https://data-argo.ifremer.fr/dac/aoml/4903532/4903532_Sprof.nc'\n",
-    "#Float 2 = test float on Custard with glider next to it\n",
-    "float_2_url = 'https://data-argo.ifremer.fr/dac/coriolis/1902637/1902637_Sprof.nc'\n",
-    "\n",
-    "#List the floats\n",
-    "floats_url = [float_1_url, float_2_url]\n",
-    "\n",
-    "#Assign the local float directory\n",
-    "parent_dir = os.path.abspath(os.path.join(os.getcwd(), os.pardir))\n",
-    "floats_dir = os.path.join(parent_dir, 'Data/Floats')\n",
-    "\n",
-    "#Create floats filename\n",
-    "floats_filenames = []\n",
-    "for i in floats_url:\n",
-    "    filename = floats_dir + '/' + i.rsplit('/', 1)[1]\n",
-    "    floats_filenames.append(filename)\n",
-    "\n",
-    "for url, filename in zip(floats_url, floats_filenames):\n",
-    "    urlretrieve(url, filename)\n",
-    "\n",
-    "#We will loop through the float files, we create two dataframe. One with all the positions from both floats, and one with only the last positions from both floats.\n",
-    "#Since we know plot the last position of the float at the date of the plot, the second one is not needed.\n",
-    "\n",
-    "#Create empty df\n",
-    "position_df = pd.DataFrame({'PROF_NUM' : str(), 'LONGITUDE' : [], 'LATITUDE' : [], 'float' : int()})\n",
-    "last_position_df = pd.DataFrame({'PROF_NUM' : str(), 'LONGITUDE' : [], 'LATITUDE' : [], 'float' : int()})\n",
-    "\n",
-    "for file, wmo in zip(floats_filenames, wmo_list):\n",
-    "    dat = xr.open_dataset(file)\n",
-    "    dat = dat.rename({'CYCLE_NUMBER':'PROF_NUM'}).swap_dims({'N_PROF':'PROF_NUM'})\n",
-    "    temp_df = dat[['LONGITUDE', 'LATITUDE', 'JULD']].to_dataframe().reset_index()\n",
-    "    temp_df['float'] = wmo\n",
-    "    last_temp_df = temp_df[temp_df['JULD'] == max(temp_df['JULD'])]\n",
-    "\n",
-    "    last_position_df = pd.concat([last_position_df, last_temp_df], ignore_index=True)\n",
-    "    position_df = pd.concat([position_df, temp_df], ignore_index=True)\n",
-    "    dat.close()\n",
-    "position_df = position_df[position_df['LATITUDE'] > min_lat]\n",
-    "\n",
-    "######\n",
-    "\n",
-    "# Load shape files for bathymetry:\n",
-    "#first_line_path = 'c:\\\\Users\\\\flapet\\\\OneDrive - NOC\\\\Documents\\\\NRT_viz\\\\biocarbon_nrt_data_viz/Data/ne_10m_bathymetry_all/ne_10m_bathymetry_J_1000.shp'\n",
-    "#second_line_path = 'c:\\\\Users\\\\flapet\\\\OneDrive - NOC\\\\Documents\\\\NRT_viz\\\\biocarbon_nrt_data_viz/Data/ne_10m_bathymetry_all/ne_10m_bathymetry_I_2000.shp'\n",
+    "    return np.array(circle_points)\n",
     "\n",
     "first_line_path  = 'C:\\\\Users\\\\hanshil\\\\Documents\\\\GitHub\\\\biocarbon_nrt_data_viz\\\\data\\\\bathymetry\\\\ne_10m_bathymetry_J_1000.shp'\n",
     "second_line_path = 'C:\\\\Users\\\\hanshil\\\\Documents\\\\GitHub\\\\biocarbon_nrt_data_viz\\\\data\\\\bathymetry\\\\ne_10m_bathymetry_I_2000.shp'\n",
@@ -195,34 +119,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['cmems_sea_level-sla-1d-20240524_20240524-nrt.nc', 'olci_a_1km-CHL_OC4ME-1d-20240524_20240524-nrt.nc', 'olci_b_1km-CHL_OC4ME-1d-20240524_20240524-nrt.nc', 'slstr_a-sea_surface_temperature-1d-20240524_20240524-nrt.nc', 'slstr_b-sea_surface_temperature-1d-20240524_20240524-nrt.nc', 'viirs_noaa20-chl_oc5ci-1d-20240524_20240524-nrt.nc', 'viirs_suomi-chl_oc5_pic-1d-20240524_20240524-nrt.nc']\n",
-      "File: cmems_sea_level-sla-1d-20240524_20240524-nrt.nc\n",
-      "Base Name: cmems_sea_level-sla-1d-20240524_20240524-nrt.nc\n",
+      "['cmems_sea_level-sla-1d-20240527_20240527-nrt.nc', 'olci_a_1km-CHL_OC4ME-1d-20240527_20240527-nrt.nc', 'olci_b_1km-CHL_OC4ME-1d-20240527_20240527-nrt.nc', 'slstr_a-sea_surface_temperature-1d-20240527_20240527-nrt.nc', 'slstr_b-sea_surface_temperature-1d-20240527_20240527-nrt.nc', 'viirs_noaa20-chl_oc5ci-1d-20240527_20240527-nrt.nc', 'viirs_suomi-chl_oc5_pic-1d-20240527_20240527-nrt.nc']\n",
+      "File: cmems_sea_level-sla-1d-20240527_20240527-nrt.nc\n",
+      "Base Name: cmems_sea_level-sla-1d-20240527_20240527-nrt.nc\n",
       "Key Variable: sla\n",
-      "File: olci_a_1km-CHL_OC4ME-1d-20240524_20240524-nrt.nc\n",
-      "Base Name: olci__1km-CHL_OC4ME-1d-20240524_20240524-nrt.nc\n",
+      "File: olci_a_1km-CHL_OC4ME-1d-20240527_20240527-nrt.nc\n",
+      "Base Name: olci__1km-CHL_OC4ME-1d-20240527_20240527-nrt.nc\n",
       "Key Variable: CHL_OC4ME\n",
-      "File: olci_b_1km-CHL_OC4ME-1d-20240524_20240524-nrt.nc\n",
-      "Base Name: olci__1km-CHL_OC4ME-1d-20240524_20240524-nrt.nc\n",
+      "File: olci_b_1km-CHL_OC4ME-1d-20240527_20240527-nrt.nc\n",
+      "Base Name: olci__1km-CHL_OC4ME-1d-20240527_20240527-nrt.nc\n",
       "Key Variable: CHL_OC4ME\n",
-      "File: slstr_a-sea_surface_temperature-1d-20240524_20240524-nrt.nc\n",
-      "Base Name: slstr_-sea_surface_temperature-1d-20240524_20240524-nrt.nc\n",
+      "File: slstr_a-sea_surface_temperature-1d-20240527_20240527-nrt.nc\n",
+      "Base Name: slstr_-sea_surface_temperature-1d-20240527_20240527-nrt.nc\n",
       "Key Variable: sea_surface_temperature\n",
-      "File: slstr_b-sea_surface_temperature-1d-20240524_20240524-nrt.nc\n",
-      "Base Name: slstr_-sea_surface_temperature-1d-20240524_20240524-nrt.nc\n",
+      "File: slstr_b-sea_surface_temperature-1d-20240527_20240527-nrt.nc\n",
+      "Base Name: slstr_-sea_surface_temperature-1d-20240527_20240527-nrt.nc\n",
       "Key Variable: sea_surface_temperature\n",
-      "File: viirs_noaa20-chl_oc5ci-1d-20240524_20240524-nrt.nc\n",
-      "Base Name: viirs_noaa20-chl_oc5ci-1d-20240524_20240524-nrt.nc\n",
+      "File: viirs_noaa20-chl_oc5ci-1d-20240527_20240527-nrt.nc\n",
+      "Base Name: viirs_noaa20-chl_oc5ci-1d-20240527_20240527-nrt.nc\n",
       "Key Variable: chl_oc5ci\n",
-      "File: viirs_suomi-chl_oc5_pic-1d-20240524_20240524-nrt.nc\n",
-      "Base Name: viirs_suomi-chl_oc5_pic-1d-20240524_20240524-nrt.nc\n",
+      "File: viirs_suomi-chl_oc5_pic-1d-20240527_20240527-nrt.nc\n",
+      "Base Name: viirs_suomi-chl_oc5_pic-1d-20240527_20240527-nrt.nc\n",
       "Key Variable: chl_oc5\n"
      ]
     }
@@ -233,7 +157,7 @@
     "## List most recent files\n",
     "\n",
     "# Get yesterday's date in the required format\n",
-    "yesterday = (datetime.now() - timedelta(days=2)).strftime('%Y%m%d')\n",
+    "yesterday = (datetime.now() - timedelta(days=1)).strftime('%Y%m%d')\n",
     "\n",
     "# List to store matching file names\n",
     "matching_files = []\n",
@@ -281,22 +205,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\hanshil\\AppData\\Local\\Temp\\ipykernel_31716\\1324976813.py:24: RuntimeWarning: Mean of empty slice\n",
+      "C:\\Users\\hanshil\\AppData\\Local\\Temp\\ipykernel_14596\\1656339745.py:34: RuntimeWarning: Mean of empty slice\n",
       "  combined_data_var_mean = np.nanmean(combined_data_var, axis=0)\n",
-      "C:\\Users\\hanshil\\AppData\\Local\\Temp\\ipykernel_31716\\1324976813.py:24: RuntimeWarning: Mean of empty slice\n",
+      "C:\\Users\\hanshil\\AppData\\Local\\Temp\\ipykernel_14596\\1656339745.py:34: RuntimeWarning: Mean of empty slice\n",
       "  combined_data_var_mean = np.nanmean(combined_data_var, axis=0)\n"
      ]
     }
    ],
    "source": [
     "# Plotting loops\n",
+    "\n",
+    "# 130km circle around deploy point\n",
+    "circle_points = generate_circle_points(60, -24, 130)\n",
+    "circle_lats, circle_lons = circle_points[:, 0], circle_points[:, 1]\n",
+    "\n",
+    "# Load float positions\n",
+    "float_position_path = os.path.join(floats_dir, 'Float_positions_2024_05_25.csv')\n",
+    "full_position = pd.read_csv(float_position_path)\n",
     "\n",
     "for base_name, files in file_dict.items():\n",
     "\n",
@@ -391,20 +323,44 @@
     "    plot_title  = f'{xx_output_dir_name}' + f' {date_of_plot}'\n",
     "    ax.set_title(plot_title,fontsize = 24)\n",
     "\n",
-    "    # Filter the float position data to highlight the last position at the date of the plot\n",
-    "    last_pos_df = position_df[position_df['JULD'] <= date_of_plot]\n",
-    "    red_point   = last_pos_df[last_pos_df['JULD'] == max(last_pos_df['JULD'])]\n",
     "    ax.add_feature(cfeature.COASTLINE)\n",
     "\n",
-    "    # Ploting the float positions\n",
-    "    sc  = ax.scatter(last_pos_df['LONGITUDE'], last_pos_df['LATITUDE'], transform=ccrs.PlateCarree(), c = 'black', zorder = 3) # Scatter plot of the previous positions\n",
-    "    sc2 = ax.scatter(red_point['LONGITUDE'], red_point['LATITUDE'], transform=ccrs.PlateCarree(), c = 'red', zorder = 4) # Scatter plot of the most recent position in red\n",
-    "    sc3 = ax.scatter(-24,60,transform=ccrs.PlateCarree(), edgecolors='black', facecolors='none', marker='s') # Mark deploy point\n",
+    "    # Float plotting section\n",
+    "    # Get the unique float names\n",
+    "    unique_floats = full_position['float'].unique()\n",
     "\n",
-    "    circle_geometry = create_circle(-24, 60, 130)\n",
-    "    circle_patch = ax.add_geometries([circle_geometry], crs=ccrs.PlateCarree(), transform=ccrs.PlateCarree(), edgecolor='black', facecolor='none')\n",
+    "    # Store legend handles and labels\n",
+    "    legend_handles = []\n",
     "    \n",
-    "    # Plot the bathymetry at 1000 and 2000m\n",
+    "    # Plot each float's positions\n",
+    "    for float_name in unique_floats:\n",
+    "        float_data = full_position[full_position['float'] == float_name].sort_values(by='JULD', ascending=False)  # Sort in descending order\n",
+    "\n",
+    "        # Get the colors and opacities for the points\n",
+    "        rgba_color = to_rgba(float_colors.get(float_name, '#000000'))  # Default to black if not found\n",
+    "        num_positions = len(float_data)\n",
+    "        alphas = np.linspace(1, 0.1, min(num_positions, 9))  # Reverse the opacity gradient\n",
+    "\n",
+    "        # Plot the positions and lines, with the first 9 points have a decreasing alpha\n",
+    "        for i, (index, row) in enumerate(float_data.iterrows()):\n",
+    "            alpha = alphas[i] if i < 9 else 0.1\n",
+    "            rgba_color_with_alpha = (*rgba_color[:3], alpha)\n",
+    "            marker_edge_color     = (*rgba_color[:3], alpha)  # Marker edge color follows opacity gradient\n",
+    "            ax.scatter(row['LONGITUDE'], row['LATITUDE'], color=rgba_color_with_alpha, edgecolor=marker_edge_color, transform=ccrs.PlateCarree(), zorder=3)\n",
+    "\n",
+    "            if i > 0:\n",
+    "                prev_row = float_data.iloc[i - 1]\n",
+    "                ax.plot([prev_row['LONGITUDE'], row['LONGITUDE']],\n",
+    "                        [prev_row['LATITUDE'], row['LATITUDE']],\n",
+    "                        color=rgba_color_with_alpha, transform=ccrs.PlateCarree(), zorder=2)\n",
+    "                \n",
+    "        # Create a proxy artist for each float\n",
+    "        proxy = plt.Line2D([0], [0], linestyle='-', marker='o', color=float_colors.get(float_name, '#000000'), label=float_name)\n",
+    "        legend_handles.append(proxy)\n",
+    "    \n",
+    "    sc3 = ax.scatter(-24,60,transform=ccrs.PlateCarree(), edgecolors='black', facecolors='none', marker='s')\n",
+    "    ax.plot(circle_lons, circle_lats, transform=ccrs.PlateCarree(), color='black')\n",
+    "    \n",
     "    gdf_1000.plot(ax=ax, transform=ccrs.PlateCarree(), linewidth=0.5, edgecolor='k', facecolor='none')\n",
     "    gdf_2000.plot(ax=ax, transform=ccrs.PlateCarree(), linewidth=0.3, edgecolor='k', facecolor='none')\n",
     "    \n",
@@ -413,22 +369,17 @@
     "    gl.top_labels   = False # suppress top labels\n",
     "    gl.right_labels = False # suppress right labels\n",
     "    \n",
-    "    # Create a proxy artist for the legend\n",
-    "    proxy = plt.Line2D([0], [0], linestyle='none', marker='s', color='black', markersize=10, markerfacecolor='none')\n",
-    "    # Add a legend with the proxy artist\n",
-    "    ax.legend([proxy], ['Deploy Point'], loc='lower left')\n",
+    "    # Add legend in\n",
+    "    deploy_point_proxy = plt.Line2D([0], [0], linestyle='none', marker='s', color='black', markersize=10, markerfacecolor='none', label='Deploy Point')\n",
+    "    legend_handles.append(deploy_point_proxy)\n",
+    "    ax.legend(handles=legend_handles, loc='lower left')\n",
     "\n",
-    "    # Save directory based on variable\n",
+    "    # Save output\n",
     "    save_dir = os.path.join(output_dir, f'{xx_output_dir_name}{\"_log\" if log_scaling else \"\"}')\n",
-    "\n",
-    "    # Check if the directory exists, if not create it\n",
     "    if not os.path.exists(save_dir):\n",
     "        os.makedirs(save_dir)\n",
-    "\n",
-    "    # Format filename\n",
-    "    filename = f'{xx_output_dir_name}{\"_log\" if log_scaling else \"\"}_{date_of_plot}_{base_name}.png'\n",
-    "\n",
-    "    # Save the plot\n",
+    "    basename_suffix = base_name[:10]\n",
+    "    filename = f'{xx_output_dir_name}{\"_log\" if log_scaling else \"\"}_{date_of_plot}_NEODASS.png'\n",
     "    plt.savefig(os.path.join(save_dir, filename))\n",
     "    \n",
     "    plt.clf()\n",
